tdf#109197 crash when deleting user field variables in sw

regression from:
commit a706bb06d5326e7a997dd1d71f3f947bd0ad28e6
"new loplugin: useuniqueptr: sw part 1"

Change-Id: I57f9c9e6d7eeccc033b71d7182c960f3d79df73c